fixed capitalization of a couple titles and nav-bar alignment

--- a/css/_navbar.scss
+++ b/css/_navbar.scss
@@ -70,9 +70,8 @@ a {
 
 .yellowBarText {
   width: 100%;
-  text-align: center;
   font-size: 12px;
-  padding-left: 30px;
+  padding-left: 10px;
   padding-right: 30px;
   color: black;
 }
@@ -111,6 +110,7 @@ a {
       display: inline-block;
       font-size: 14px;
       font-family: "Krub", sans-serif;
+      margin-left: -5px;
     }
   }
   .inlineMenu {
@@ -134,7 +134,7 @@ a {
   
   .yellowBarText {
     font-size: 14px;
-    padding-left: 60px;
+    padding-left: 10px;
   }
 
   .--hamburguer {
